Tagasi link medium font weight ja noole ja teksti vahele rohkem õhku

--- a/css/akadeemia.css
+++ b/css/akadeemia.css
@@ -685,12 +685,10 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
  .page-nav-text{
    display:inline-block;
    font-size:16px;
-   font-weight: 600;
+   font-weight: 500;
  }
  .page-nav-text span{vertical-align:baseline!important;font-size:18px!important}
  .page-nav-text i{
-   font-size:12px;
-   font-weight: 400;
    margin-right: 5px;
  }
  .page-nav-text.next{margin-left:6px}
@@ -958,7 +956,6 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
     float: left;
   }
   .row-table .table-cell.short-description .register{
-    /*Asko 23.10*/
     width: 125px;
     height: 30px;  
     border-radius: 2px;  
@@ -975,7 +972,6 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
     padding: 1px;
   }
   .row-table .table-cell.short-description .info{
-    /*Asko 23.10*/
     width: 125px;
     height: 30px;  
     border-radius: 2px;  
@@ -1246,7 +1242,7 @@ footer,footer a{
      .row-trainers-page .trainer .img{width:100%;margin-bottom:0}
      .row-trainers-page .trainer p{
        font-size:26px;
-       font-weight:medium; /*Asko  23.10*/
+       font-weight:medium;
        margin:0;
        white-space:nowrap;
      }
