--- a/css/akadeemia.css
+++ b/css/akadeemia.css
@@ -456,6 +456,20 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
 
  #trainer-footer {
    padding: 30px 50px 30px 50px;
+   width: 718px;
+   height: 23px; 
+   font-family: Roboto; 
+   font-size: 16px; 
+   font-weight: 300; 
+   font-style: normal; 
+   font-stretch: normal; 
+   line-height: normal; 
+   letter-spacing: normal; 
+   color: #8a8a8a;
+ }
+
+ .trainer-footer span a:active, a:focus, a{
+  color: #8a8a8a;
  }
  .site-search {
     width: 875px;
