--- a/css/akadeemia.css
+++ b/css/akadeemia.css
@@ -244,7 +244,7 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
    position:relative;
    outline:0;
    border-radius: 2px;
-   background-color: #fefefe;
+   background-color: #FEFEFE;
    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
   }
  .modal-backdrop{position:fixed;z-index:1040;background-color:#000}
@@ -892,7 +892,8 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
   }
   .row-table .table-cell h3{
     font-size:16px;
-    //margin:10px 0 3px;
+    line-height: 22px;
+    /* //margin:10px 0 3px; */
     margin:0px 0 3px;
   }
   .row-table .table-cell .ap-table-order {
@@ -920,8 +921,8 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
     width:100%;*/
     display: inline-block;
     width: 200px;
-    //padding:0 30px 0 15px;
-    font-size: 16px;
+    /* //padding:0 30px 0 15px; */
+    font-size: 13px;
     line-height: 22px;
     font-weight: 500;
   }
@@ -1262,11 +1263,11 @@ footer,footer a{
      }
      .row-trainers-page .trainer:nth-child(odd){float:none}.row-trainers-details .portrait{position:fixed;top:0;bottom:0;left:150px;width:520px;height:auto;overflow:hidden;margin:0}.row-trainers-details .info{margin-left:670px;padding:0}
      .row-trainers-details .info .details {
-       background:#fefefe;
+       background:#FEFEFE;
        padding:50px 0 55px 60px
      }
      .row-trainers-details .info .details-header {
-       background:#fefefe;
+       background:#FEFEFE;
        padding:10px 0 10px 60px;
        border-bottom: 1px solid #e9e9e9;
      }
