--- a/css/akadeemia.css
+++ b/css/akadeemia.css
@@ -73,7 +73,7 @@
   .col-sm-offset-8{margin-left:66.66666667%}.col-sm-offset-7{margin-left:58.33333333%}
   .col-sm-offset-6{margin-left:50%}.col-sm-offset-5{margin-left:41.66666667%}
   .col-sm-offset-4{margin-left:33.33333333%}.col-sm-offset-3{margin-left:25%}
-  .col-sm-offset-2{margin-left:16.66666667%}.col-sm-offset-1{margin-left:8.33333333%}
+  .col-sm-offset-2{margin-left:16.66666667%}.col-sm-offset-1{margin-left:8.33333333%; margin-right:8.33333333%}
   .col-sm-offset-0{margin-left:0}
 }
 
@@ -892,8 +892,7 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
   }
   .row-table .table-cell h3{
     font-size:16px;
-    line-height: 22px;
-    /* //margin:10px 0 3px; */
+    //margin:10px 0 3px;
     margin:0px 0 3px;
   }
   .row-table .table-cell .ap-table-order {
@@ -922,10 +921,13 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
     display: inline-block;
     width: 200px;
     /* //padding:0 30px 0 15px; */
-    font-size: 13px;
+    font-size: 18px;
     line-height: 22px;
     font-weight: 500;
   }
+  .row-table .table-cell.title p{
+    font-size: 13px;
+   }
   .row-table .table-cell.duration {
     font-size: 18px; /*Sergei 23.10*/
     line-height: 22px;
@@ -936,7 +938,7 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
   }
   .row-table .table-cell.trainer{
     position:absolute;top:15px;right:15px;
-    font-size: 16px;
+    font-size: 18px;
     line-height: 22px;
     font-weight: 500;
   }
