--- a/css/akadeemia.css
+++ b/css/akadeemia.css
@@ -803,7 +803,17 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
    font-family: Roboto;
   }
  .row-intro p {
-   line-height: 24px;
+  width: 920px;
+  height: 61px;
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.56;
+  letter-spacing: normal;
+  text-align: center;
+  color: #8a8a8a;
  }
  .row-intro a{font-size:20px;color:#750d0d}
  .row-intro a:hover{color:#af1f24}
@@ -904,10 +914,10 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
 
     //padding:15px 0 0 15px;
     /*white-space:nowrap;*/
-    font-size: 16px;
     line-height: 22px;
     font-weight: 500;
   }
+  
   .row-table .table-header .date{
     width: 49%;
     padding: 0 15px 0 15px;
@@ -929,7 +939,6 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
     font-size: 13px;
    }
   .row-table .table-cell.duration {
-    font-size: 18px; /*Sergei 23.10*/
     line-height: 22px;
     font-weight: 500;
   }
@@ -938,7 +947,6 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
   }
   .row-table .table-cell.trainer{
     position:absolute;top:15px;right:15px;
-    font-size: 16px;
     line-height: 22px;
     font-weight: 500;
   }
@@ -1004,6 +1012,9 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
     text-align: center;  
     color: #424242;    
     padding: 1px;
+  }
+  .row-table .table-cell.short-description .info:hover{
+    background-color: transparent;
   }
 
   .row-table .table-footer{background:#fff;text-align:center;cursor:default}.row-table .table-footer a{display:inline-block;padding:0 1px 8px;margin:15px 12px;color:#a7a7a7}.row-table .table-footer a.active{border-bottom:1px solid #333;color:#333}.row-table .table-footer a:hover:not(.active){cursor:pointer;color:#d92027}.row-table .table-footer a.active:hover{cursor:default}.row-table .table-footer a.ap-icon-arrow-l,.row-table .table-footer a.ap-icon-arrow-r{margin-right:0;margin-left:0}.row-table .table-footer span{color:#a7a7a7}.row-table .loading{position:absolute;top:0;right:15px;bottom:0;left:15px;background:rgba(255,255,255,.6);z-index:2}.row-table .loading .spinner{margin:120px auto 0;width:42px;height:42px;border:3px solid #333;border-radius:50%;border-left-color:transparent;border-right-color:transparent;-webkit-animation:loadspin 575ms infinite linear;-moz-animation:loadspin 575ms infinite linear;animation:loadspin 575ms infinite linear}@-webkit-keyframes loadspin{100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}@-moz-keyframes loadspin{100%{-moz-transform:rotate(360deg);transform:rotate(360deg)}}@keyframes loadspin{100%{-webkit-transform:rotate(360deg);-moz-transform:rotate(360deg);transform:rotate(360deg)}}.row-table .loading .error{width:160px;display:block;background:#af1f24;color:#fff;padding:15px 8px;text-align:center;margin:120px auto 0}.trainer-portraits{background:url(/wp-content/themes/Akadeemia/img/trainers-all.jpg) bottom center/auto 150px no-repeat;height:180px}.light .trainer-portraits{background-image:url(/wp-content/themes/Akadeemia/img/trainers-all-light.jpg)}
@@ -1202,7 +1213,7 @@ footer,footer a{
        font-size:46px;
        font-weight:300;
      }
-     .row-table{font-size:14px}.row-table .table-header{font-weight:600;padding:25px 0}
+     .row-table{font-size:16px}.row-table .table-header{font-weight:600;padding:25px 0}
      .row-table .table-cell{
        //vertical-align:middle;
        display:inline-block;
