--- a/css/akadeemia.css
+++ b/css/akadeemia.css
@@ -803,19 +803,8 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
    font-family: Roboto;
   }
  .row-intro p {
-  width: 920px;
-  height: 61px;
-  font-family: Roboto;
-  font-size: 18px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1.56;
-  letter-spacing: normal;
-  text-align: center;
-  color: #8a8a8a;
+   line-height: 24px;
  }
- 
  .row-intro a{font-size:20px;color:#750d0d}
  .row-intro a:hover{color:#af1f24}
  .row-intro a span{top:-1px;left:6px;position:relative;font-size:12px}
