--- a/css/akadeemia.css
+++ b/css/akadeemia.css
@@ -803,7 +803,17 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
    font-family: Roboto;
   }
  .row-intro p {
-   line-height: 24px;
+   width: 920px;
+    height: 61px;
+    font-family: Roboto;
+    font-size: 18px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.56;
+    letter-spacing: normal;
+    text-align: center;
+    color: #8a8a8a;
  }
  .row-intro a{font-size:20px;color:#750d0d}
  .row-intro a:hover{color:#af1f24}
