--- a/css/akadeemia.css
+++ b/css/akadeemia.css
@@ -671,9 +671,13 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
    -moz-osx-font-smoothing:grayscale;
    color: #424242;
  }
- .ap-table-order:before{content:"\e909"}
- .asc .ap-table-order:before{content:"\e908"}
+ .ap-table-order:before{content:"\e909"; -webkit-text-stroke: 2px #a71617;}
+ .row-table .table-row .ap-table-order:before{content:"\e909"; -webkit-text-stroke: 2px white;}
+ .row-table .table-row:hover .ap-table-order:before{content:"\e909"; -webkit-text-stroke: 2px #f3f3f3;}
+ .asc .ap-table-order:before{content:"\e908"; -webkit-text-stroke: 2px #a71617;}
  .ap-table-order-asc:before{content:"\e908"}
+ .row-table .table-row .ap-table-order-asc:before{content:"\e908"; -webkit-text-stroke: 2px white;}
+ .row-table .table-row:hover .ap-table-order-asc:before{content:"\e908"; -webkit-text-stroke: 2px #f3f3f3;} 
  .ap-icon-arrow-a-l:before{content:"\e907"}
  .ap-icon-close:before{content:"\e906"}
  .ap-icon-camera:before{content:"\e905"}
