--- a/css/critical.css
+++ b/css/critical.css
@@ -654,7 +654,7 @@ header .search span:nth-child(2) {
   }
   .row-intro h2,
   .row-intro p {
-    text-align: right;
+    text-align: center;
   }
   .row-intro a {
     float: right;
