--- a/css/akadeemia.css
+++ b/css/akadeemia.css
@@ -858,7 +858,6 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
    font-family: Roboto;
   }
  .row-intro p {
-   width: 920px;
     height: 61px;
     font-family: Roboto;
     font-size: 18px;
@@ -1269,7 +1268,7 @@ footer,footer a{
        font-size:46px;
        font-weight:300;
      }
-     .row-table{font-size:16px}.row-table .table-header{font-weight:600;padding:25px 0}
+     .row-table{font-size:16px}.row-table .table-header{font-weight:600;padding:25px 0px 5px 0px}
      .row-table .table-cell{
        //vertical-align:middle;
        display:inline-block;
