--- a/css/critical.css
+++ b/css/critical.css
@@ -382,7 +382,7 @@ header .search span:nth-child(2) {
 .row-table .table-header {
   position: relative;
   text-transform: uppercase;
-  background: #af1f24;
+  background: #a71617;
   font-size: 14px;
   color: #fff;
   z-index: 3;
