--- a/css/akadeemia.css
+++ b/css/akadeemia.css
@@ -41,7 +41,7 @@
     display: none !important;
   }
   .row-table .table-cell.title{
-    width:60.33% !important;
+    width:60.33%;
  }
  .row-table .table-cell.short-description {
   margin-left: 29.02% !important;
@@ -129,6 +129,16 @@
     width: 875px;
   }
 }
+
+.modal-window-hr{
+    width: 800px;
+    margin-top: 5px;
+    margin-bottom: 15px;
+    height: 0px;
+    box-shadow: 0 0 4px 1px rgba(233, 233, 233, 0.5);
+    border: solid 1px #e9e9e9;
+}
+
 
 caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-width:100%;margin-bottom:20px}.table>tbody>tr>td,.table>tbody>tr>th,.table>tfoot>tr>td,.table>tfoot>tr>th,.table>thead>tr>td,.table>thead>tr>th{padding:8px;line-height:1.42857143;vertical-align:top;border-top:1px solid #ddd}.table>thead>tr>th{vertical-align:bottom;border-bottom:2px solid #ddd}.table>caption+thead>tr:first-child>td,.table>caption+thead>tr:first-child>th,.table>colgroup+thead>tr:first-child>td,.table>colgroup+thead>tr:first-child>th,.table>thead:first-child>tr:first-child>td,.table>thead:first-child>tr:first-child>th{border-top:0}.table>tbody+tbody{border-top:2px solid #ddd}.table .table{background-color:#fff}.table-condensed>tbody>tr>td,.table-condensed>tbody>tr>th,.table-condensed>tfoot>tr>td,.table-condensed>tfoot>tr>th,.table-condensed>thead>tr>td,.table-condensed>thead>tr>th{padding:5px}.table-bordered,.table-bordered>tbody>tr>td,.table-bordered>tbody>tr>th,.table-bordered>tfoot>tr>td,.table-bordered>tfoot>tr>th,.table-bordered>thead>tr>td,.table-bordered>thead>tr>th{border:1px solid #ddd}.table-bordered>thead>tr>td,.table-bordered>thead>tr>th{border-bottom-width:2px}.table-striped>tbody>tr:nth-of-type(odd){background-color:#f9f9f9}.table-hover>tbody>tr:hover,.table>tbody>tr.active>td,.table>tbody>tr.active>th,.table>tbody>tr>td.active,.table>tbody>tr>th.active,.table>tfoot>tr.active>td,.table>tfoot>tr.active>th,.table>tfoot>tr>td.active,.table>tfoot>tr>th.active,.table>thead>tr.active>td,.table>thead>tr.active>th,.table>thead>tr>td.active,.table>thead>tr>th.active{background-color:#f5f5f5}table col[class*=col-]{position:static;display:table-column;float:none}table td[class*=col-],table th[class*=col-]{position:static;display:table-cell;float:none}.table-hover>tbody>tr.active:hover>td,.table-hover>tbody>tr.active:hover>th,.table-hover>tbody>tr:hover>.active,.table-hover>tbody>tr>td.active:hover,.table-hover>tbody>tr>th.active:hover{background-color:#e8e8e8}.table>tbody>tr.success>td,.table>tbody>tr.success>th,.table>tbody>tr>td.success,.table>tbody>tr>th.success,.table>tfoot>tr.success>td,.table>tfoot>tr.success>th,.table>tfoot>tr>td.success,.table>tfoot>tr>th.success,.table>thead>tr.success>td,.table>thead>tr.success>th,.table>thead>tr>td.success,.table>thead>tr>th.success{background-color:#dff0d8}.table-hover>tbody>tr.success:hover>td,.table-hover>tbody>tr.success:hover>th,.table-hover>tbody>tr:hover>.success,.table-hover>tbody>tr>td.success:hover,.table-hover>tbody>tr>th.success:hover{background-color:#d0e9c6}.table>tbody>tr.info>td,.table>tbody>tr.info>th,.table>tbody>tr>td.info,.table>tbody>tr>th.info,.table>tfoot>tr.info>td,.table>tfoot>tr.info>th,.table>tfoot>tr>td.info,.table>tfoot>tr>th.info,.table>thead>tr.info>td,.table>thead>tr.info>th,.table>thead>tr>td.info,.table>thead>tr>th.info{background-color:#d9edf7}
  .table-hover>tbody>tr.info:hover>td,.table-hover>tbody>tr.info:hover>th,.table-hover>tbody>tr:hover>.info,.table-hover>tbody>tr>td.info:hover,.table-hover>tbody>tr>th.info:hover{background-color:#c4e3f3}.table>tbody>tr.warning>td,.table>tbody>tr.warning>th,.table>tbody>tr>td.warning,.table>tbody>tr>th.warning,.table>tfoot>tr.warning>td,.table>tfoot>tr.warning>th,.table>tfoot>tr>td.warning,.table>tfoot>tr>th.warning,.table>thead>tr.warning>td,.table>thead>tr.warning>th,.table>thead>tr>td.warning,.table>thead>tr>th.warning{background-color:#fcf8e3}.table-hover>tbody>tr.warning:hover>td,.table-hover>tbody>tr.warning:hover>th,.table-hover>tbody>tr:hover>.warning,.table-hover>tbody>tr>td.warning:hover,.table-hover>tbody>tr>th.warning:hover{background-color:#faf2cc}.table>tbody>tr.danger>td,.table>tbody>tr.danger>th,.table>tbody>tr>td.danger,.table>tbody>tr>th.danger,.table>tfoot>tr.danger>td,.table>tfoot>tr.danger>th,.table>tfoot>tr>td.danger,.table>tfoot>tr>th.danger,.table>thead>tr.danger>td,.table>thead>tr.danger>th,.table>thead>tr>td.danger,.table>thead>tr>th.danger{background-color:#f2dede}.table-hover>tbody>tr.danger:hover>td,.table-hover>tbody>tr.danger:hover>th,.table-hover>tbody>tr:hover>.danger,.table-hover>tbody>tr>td.danger:hover,.table-hover>tbody>tr>th.danger:hover{background-color:#ebcccc}.table-responsive{min-height:.01%;overflow-x:auto}
@@ -285,6 +295,10 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
    /*border-top: 2px solid #af1f24;*/
    padding: 40px;
    overflow: hidden;
+   width: 950px;
+   height: 525px;
+   background-color: #fefefe;
+
  }
  .modal__envelope {
    background: url(../img/icon-envelope.svg) center top / 185px no-repeat;
@@ -300,11 +314,13 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
  .modal_heading {
    margin-bottom: 30px;
    color: #a71617;
+   font-size: 46px;
+
  }
  .modal_content {
-   font-size: 16px;
-   margin-bottom: 25px;
+   font-size: 18px;
    line-height: 1.56;
+   margin: 25px 85px 25px 85px;
  }
  .modal_content b {
    font-size: 18px;
@@ -364,8 +380,9 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
    opacity: 1;
  }
  .form--newsletter {
-   max-width: 420px;
-   margin: 0 auto;
+   /* max-width: 420px;
+   margin: 0 auto; */
+   
  }
  .form--newsletter .input {
    text-align: center;
@@ -388,7 +405,7 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
  }
  .form--newsletter .button {
    display: inline-block;
-   padding: 15px 50px;
+   padding: 7px 50px 7px 50px;
    margin: 30px 0 0 0;
    font-size: 18px;
    font-weight: 500;
@@ -561,9 +578,13 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
   border: solid 2px #ffffff;
   background-color: #fdfdfd;
   margin: 0px 20px 65px 20px;
+  font-family: Roboto;
 }
+/* .site-search-category select, select option {
+  color: hotpink;
+} */
 .site-search-category_holder{
-  content-align: center;
+  align-content: center;
 }
 .product-categories{
   font-family: Roboto;
@@ -815,7 +836,7 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
    -ms-touch-action:none;touch-action:none
  }
  header .burger span{
-   //background:#323232;
+   /* background:#323232; */
    background: #ffffff;
    display:block;height:4px;
    position:absolute;left:20px;width:33px;border-radius:2px;
@@ -861,7 +882,7 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
     height: 61px;
     font-family: Roboto;
     font-size: 18px;
-    font-weight: normal;
+    font-weight: 400;
     font-style: normal;
     font-stretch: normal;
     line-height: 1.56;
@@ -882,7 +903,7 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
  .row-text p{margin-left:-15px;margin-bottom:30px}.row-text a{color:#d92027}.row-text a:hover{color:#7c131b}.row-text ul{margin:-20px 0 20px}
  .row-table{
    font:16px/20px Roboto;
-   font-weight: 500;
+   font-weight: 400;
    margin-bottom:55px;}
  .row-table .table-header{
    position:relative;text-transform:uppercase;
@@ -966,10 +987,9 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
   .row-table .table-cell.date{
     /*width:49%;*/
 
-    //padding:15px 0 0 15px;
+    /* //padding:15px 0 0 15px; */
     /*white-space:nowrap;*/
     line-height: 22px;
-    font-weight: 500;
   }
   
   .row-table .table-header .date{
@@ -987,14 +1007,12 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
     /* //padding:0 30px 0 15px; */
     font-size: 18px;
     line-height: 22px;
-    font-weight: 500;
   }
   .row-table .table-cell.title p{
     font-size: 13px;
    }
   .row-table .table-cell.duration {
     line-height: 22px;
-    font-weight: 500;
   }
   .row-table .table-header .table-cell.duration {
     padding-left: 5px;
@@ -1002,7 +1020,6 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
   .row-table .table-cell.trainer{
     position:absolute;top:15px;right:15px;
     line-height: 22px;
-    font-weight: 500;
   }
   .row-table .table-header .table-cell.trainer {
     padding-left: 0px;
@@ -1037,38 +1054,39 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
   }
   .row-table .table-cell.short-description .register{
     width: 125px;
-    height: 30px;  
+    height: 30px;
     border-radius: 2px;  
     background-color: #57897c;
     font-family: Roboto;
-    font-size: 13px;  
-    font-weight: 500;  
-    font-style: normal;  
-    font-stretch: normal;  
-    line-height: 2.15;  
-    letter-spacing: normal;  
-    text-align: center;  
-    color: #ffffff;
+    font-size: 13px;
+    font-weight: 500;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 2.15;
+    letter-spacing: normal;
+    text-align: center;
+    color: #FEFEFE;
     padding: 1px;
   }
   .row-table .table-cell.short-description .info{
     width: 125px;
-    height: 30px;  
-    border-radius: 2px;  
+    height: 30px;
+    border-radius: 2px;
     border: solid 1px #8a8a8a;
     font-family: Roboto;
-    font-size: 13px;  
-    font-weight: 500;  
-    font-style: normal;  
-    font-stretch: normal;  
-    line-height: 2.15;  
-    letter-spacing: normal;  
-    text-align: center;  
-    color: #424242;    
+    font-size: 13px;
+    font-weight: 500;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 2.15;
+    letter-spacing: normal;
+    text-align: center;
+    color: #424242;
     padding: 1px;
+    background-color: #FEFEFE;
   }
   .row-table .table-cell.short-description .info:hover{
-    background-color: transparent;
+    background-color: #FEFEFE;
   }
 
   .row-table .table-footer{background:#fff;text-align:center;cursor:default}.row-table .table-footer a{display:inline-block;padding:0 1px 8px;margin:15px 12px;color:#a7a7a7}.row-table .table-footer a.active{border-bottom:1px solid #333;color:#333}.row-table .table-footer a:hover:not(.active){cursor:pointer;color:#d92027}.row-table .table-footer a.active:hover{cursor:default}.row-table .table-footer a.ap-icon-arrow-l,.row-table .table-footer a.ap-icon-arrow-r{margin-right:0;margin-left:0}.row-table .table-footer span{color:#a7a7a7}.row-table .loading{position:absolute;top:0;right:15px;bottom:0;left:15px;background:rgba(255,255,255,.6);z-index:2}.row-table .loading .spinner{margin:120px auto 0;width:42px;height:42px;border:3px solid #333;border-radius:50%;border-left-color:transparent;border-right-color:transparent;-webkit-animation:loadspin 575ms infinite linear;-moz-animation:loadspin 575ms infinite linear;animation:loadspin 575ms infinite linear}@-webkit-keyframes loadspin{100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}@-moz-keyframes loadspin{100%{-moz-transform:rotate(360deg);transform:rotate(360deg)}}@keyframes loadspin{100%{-webkit-transform:rotate(360deg);-moz-transform:rotate(360deg);transform:rotate(360deg)}}.row-table .loading .error{width:160px;display:block;background:#af1f24;color:#fff;padding:15px 8px;text-align:center;margin:120px auto 0}.trainer-portraits{background:url(/wp-content/themes/Akadeemia/img/trainers-all.jpg) bottom center/auto 150px no-repeat;height:180px}.light .trainer-portraits{background-image:url(/wp-content/themes/Akadeemia/img/trainers-all-light.jpg)}
@@ -1164,7 +1182,7 @@ footer,footer a{
 .row-trainers-details .upcoming-box .upcoming .event .trainer{font-size:13px}
 .row-trainers-details .upcoming-box .upcoming .event .trainer strong{font-size:16px}
 .row-trainers-details .upcoming-box .upcoming .event .button {
-  //background:#d92027;
+  /* //background:#d92027; */
   border-radius: 1px;
   background-color: #57897c;
   box-shadow: 0 0 4px 0 rgba(138, 138, 138, 0.5);
@@ -1268,7 +1286,11 @@ footer,footer a{
        font-size:46px;
        font-weight:300;
      }
-     .row-table{font-size:16px}.row-table .table-header{font-weight:600;padding:25px 0px 5px 0px}
+     .row-table{font-size:16px}.row-table .table-header{
+       font-weight:700;
+       padding:20px 0px 5px 0px;
+       height:60px;
+      }
      .row-table .table-cell{
        //vertical-align:middle;
        display:inline-block;
