--- a/css/akadeemia.css
+++ b/css/akadeemia.css
@@ -1071,7 +1071,7 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
     line-height: 2.15;
     letter-spacing: normal;
     text-align: center;
-    color: #FEFEFE;
+    color: transparent;
     padding: 1px;
   }
   .row-table .table-cell.short-description .info{
@@ -1089,10 +1089,10 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
     text-align: center;
     color: #424242;
     padding: 1px;
-    background-color: #FEFEFE;
+    background-color: transparent;
   }
   .row-table .table-cell.short-description .info:hover{
-    background-color: #FEFEFE;
+    background-color: transparent;
   }
 
   .row-table .table-footer{background:#fff;text-align:center;cursor:default}.row-table .table-footer a{display:inline-block;padding:0 1px 8px;margin:15px 12px;color:#a7a7a7}.row-table .table-footer a.active{border-bottom:1px solid #333;color:#333}.row-table .table-footer a:hover:not(.active){cursor:pointer;color:#d92027}.row-table .table-footer a.active:hover{cursor:default}.row-table .table-footer a.ap-icon-arrow-l,.row-table .table-footer a.ap-icon-arrow-r{margin-right:0;margin-left:0}.row-table .table-footer span{color:#a7a7a7}.row-table .loading{position:absolute;top:0;right:15px;bottom:0;left:15px;background:rgba(255,255,255,.6);z-index:2}.row-table .loading .spinner{margin:120px auto 0;width:42px;height:42px;border:3px solid #333;border-radius:50%;border-left-color:transparent;border-right-color:transparent;-webkit-animation:loadspin 575ms infinite linear;-moz-animation:loadspin 575ms infinite linear;animation:loadspin 575ms infinite linear}@-webkit-keyframes loadspin{100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}@-moz-keyframes loadspin{100%{-moz-transform:rotate(360deg);transform:rotate(360deg)}}@keyframes loadspin{100%{-webkit-transform:rotate(360deg);-moz-transform:rotate(360deg);transform:rotate(360deg)}}.row-table .loading .error{width:160px;display:block;background:#af1f24;color:#fff;padding:15px 8px;text-align:center;margin:120px auto 0}.trainer-portraits{background:url(/wp-content/themes/Akadeemia/img/trainers-all.jpg) bottom center/auto 150px no-repeat;height:180px}.light .trainer-portraits{background-image:url(/wp-content/themes/Akadeemia/img/trainers-all-light.jpg)}
@@ -1594,13 +1594,19 @@ footer,footer a{
   .row-intro h2 {
     font-size:26px;
     line-height: 1.38;
+    text-align: left;
   }
   .row-intro p {
     height:100%;
     font-size:14px;
+    text-align: left;
+  }
+  .site-search-holder {
+    text-align: left;
   }
   .site-search {
     font-size:14px;
+    text-align: left;
   }
   .row-table .table-header .date{
     width: 49%;
@@ -1619,6 +1625,31 @@ footer,footer a{
   .row-table .table-cell.short-description .info {
     margin-left:8px;
     margin-right:8px;
+  }
+  .col-lg-9,
+  .col-sm-10,
+  .col-sm-12 {
+    padding-left:10px;
+  }
+  .row-text p {
+    margin-bottom: 0px;
+  }
+
+  h2 p{
+    font-size:26px;
+    line-height: 1.38;
+    text-align: left;
+    margin-top: -50px;
+  }
+  p {
+    font-size:14px;
+    text-align: left;
+  }
+  ul {
+    padding-inline-start:10px;    
+  }
+  ul li {
+    font-size:14px;
   }
 }
 
