search parts of the page better

--- a/css/akadeemia.css
+++ b/css/akadeemia.css
@@ -469,8 +469,6 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
    pointer-events: all;
  }
 
-
-
  .carousel-inner, .overflow-hide,header h1{overflow:hidden}
 
  #trainer-footer {
@@ -503,9 +501,13 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
     text-align: center;
     color: #424242;
     border: 0;
-    background-color: rgba(138, 138, 138, 0.03);
-    box-shadow: 0 0 10px 0 rgba(138, 138, 138, 0.2);
+    height:60px;
  }
+ .site-search input:focus  {   
+  background-color: rgba(138, 138, 138, 0.03);
+  border: transparent;
+ }
+
  .btn-site-search{
    border: 0;
    margin-left: 0;
@@ -526,6 +528,7 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
    -moz-border-radius-bottomright: 2px;
    border-top-right-radius: 2px;
    border-bottom-right-radius: 2px;
+   box-shadow: 0 0 10px 0 rgba(138, 138, 138, 0.2);
  }
  .btn-site-search-span {
    font-family: akadeemia!important;
@@ -537,20 +540,20 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
     text-transform: none;
     line-height: 1;
     -webkit-font-smoothing: antialiased;
-    padding: 5px;
     cursor: pointer;
  }
  .btn-site-search-span:before {
+  height:30px;
+  width: 30px;
+  padding: 20px 20px 20px 20px;
+  box-shadow: 0 0 10px 0 rgba(138, 138, 138, 0.2);
    content:"\e904";
  }
  .site-search-hr {
-   width: 875px;
-   margin-top: 5px;
-   margin-bottom: 15px;
+   margin-top: 0px;
+   margin-bottom: 27px;
    height: 0px;
    box-shadow: 0 0 4px 1px rgba(233, 233, 233, 0.5);
-   border: solid 1px #e9e9e9;
-   /* display:none; */ /* TODO */
  }
  .site-search-holder {
    text-align: center;
@@ -572,15 +575,21 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
 }
 .site-search-category_holder{  
   width: 50%;
+  height: 65px;
   position: relative;
+  text-align: right;
+  padding-right: 20px;
 }
 
 .site-search-date_holder {
   width: 50%;
   position: relative;
   left: 50%;
-  bottom: 100px;
-  margin-bottom: -100px;
+  height: 65px;
+  bottom: 65px;
+  margin-bottom: -65px;
+  text-align: left;
+  padding-left: 20px;
 }
 .site-search-category{
   width: 186px;
@@ -614,11 +623,38 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
 @media (max-width:425px){
   .site-search-date_holder {
     width:100%;
+    height: 100px;
+    margin-bottom: -100px;
     position: relative;
     left: 0%;
     bottom: 50px;
     margin-bottom: -100px;
+    padding-left:0px !important;
   }
+  .site-search-category_holder {    
+    height: 100px;
+    text-align:left;
+  }
+  .btn-site-search-span:before {
+    position: relative;
+    top:10px;
+  }
+ }
+
+ @media (max-width:768px){
+  .site-search-date_holder {
+    padding-left: 16px;
+  }
+  .site-search-category_holder {
+    padding-right: 16px;
+  }
+  .site-search {
+    height:30px;
+ }
+ .btn-site-search-span:before {
+  padding: 6px 6px 6px 6px;
+  box-shadow: 0 0 10px 0 rgba(138, 138, 138, 0.2);
+ }
  }
 
  @media (min-width: 768px) {
@@ -680,7 +716,7 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
       width: 635px;
    }
    .site-search-hr {
-     width: 635px;
+    width: 80%;
    }
  }
  @media (max-width:992px){
@@ -696,7 +732,7 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
       width: 555px;
    }
    .site-search-hr {
-     width: 555px;
+    width: 80%;
    }
  }
  @media (max-width:640px){
@@ -704,7 +740,7 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
       width: 505px;
    }
    .site-search-hr {
-     width: 505px;
+    width: 80%;
    }
  }
  @media (max-width:590px){
@@ -1477,7 +1513,7 @@ footer,footer a{
       width: 635px;
    }
    .site-search-hr {
-     width: 635px;
+    width: 80%;
    }
  }
 
@@ -1601,7 +1637,7 @@ footer,footer a{
      width: 85%;
   }
   .site-search-hr {
-    width: 435px;
+    width: 80%;
   }
   .btn-site-search-span {
     position: absolute;
