--- a/css/akadeemia.css
+++ b/css/akadeemia.css
@@ -656,7 +656,7 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
 
 .form--sendMail .button {
   background-color: rgba(138, 138, 138, 0.03);
-  width: 420px;
+  width: 400px;
   height: 35px;
   border-radius: 1px;
   box-shadow: 0 0 4px 0 #9f9a97;
@@ -674,6 +674,10 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
   box-shadow: 0 0 4px 0 rgba(233, 233, 233, 0.5);
   border: solid 1px #e9e9e9;
   background-color: #e9e9e9;
+}
+
+.details {
+  padding-left:5px;
 }
 
 @media (max-width:425px){
@@ -711,6 +715,30 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
   padding: 6px 6px 6px 6px;
   box-shadow: 0 0 10px 0 rgba(138, 138, 138, 0.2);
  }
+
+ .form--sendMail {
+  width:95%;
+}
+
+.form--sendMail input {
+  width:95%;
+}
+
+.form--sendMail .button {
+  width:95%;  
+  max-width: 320px;
+}
+
+.row-trainers-details .upcoming-box .upcoming {
+  margin-left: 15px;
+  width:95%;
+}
+
+.info #trainer-footer {
+  padding-left: 0px;
+}
+
+
  }
 
  @media (min-width: 768px) {
