--- a/css/akadeemia.css
+++ b/css/akadeemia.css
@@ -562,6 +562,8 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
   width: 30px;
   padding: 20px 20px 20px 20px;
   box-shadow: 0 0 10px 0 rgba(138, 138, 138, 0.2);
+  position:relative;
+  top:2px;
    content:"\e904";
  }
  .site-search-hr {
@@ -698,6 +700,7 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
   .btn-site-search-span:before {
     position: relative;
     top:10px;
+    right:15px;
   }
  }
 
@@ -803,7 +806,7 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
       width: 635px;
    }
    .site-search-hr {
-    width: 80%;
+    width: 90%;
    }
  }
  @media (max-width:992px){
@@ -819,7 +822,7 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
       width: 555px;
    }
    .site-search-hr {
-    width: 80%;
+    width: 90%;
    }
  }
  @media (max-width:640px){
@@ -827,7 +830,7 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
       width: 505px;
    }
    .site-search-hr {
-    width: 80%;
+    width: 90%;
    }
  }
  @media (max-width:590px){
@@ -835,7 +838,7 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
       width: 80%;
    }
    .site-search-hr {
-     width: 80%;
+     width: 90%;
    }
  }
  @media (min-width:768px) and (max-width:991px){
@@ -1569,7 +1572,7 @@ footer,footer a{
         width: 80%;
      }
      .site-search-hr {
-       width: 80%;
+       width: 95%;
      }
 
      footer{width:100%;padding:30px 0 25px;height:74px;
@@ -1602,10 +1605,10 @@ footer,footer a{
  @media (min-width:1000px)
  {
    .site-search {
-      width: 635px;
+      width: 500px;
    }
    .site-search-hr {
-    width: 80%;
+    width: 570px;
    }
  }
 
@@ -1729,7 +1732,7 @@ footer,footer a{
      width: 85%;
   }
   .site-search-hr {
-    width: 80%;
+    width: 98%;
   }
   .btn-site-search-span {
     position: absolute;
