--- a/css/akadeemia.css
+++ b/css/akadeemia.css
@@ -635,9 +635,10 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
   border: solid 2px #ffffff;
   background-color: #fdfdfd;
   margin: 0px 10px 65px 0px;
-  padding-left:5px;
+  padding-right:5px;
+  text-align:right;
   font-family: Roboto;
-  background: url(https://i.gyazo.com/754bdef37d34b34f89ed698f890ad590.png) no-repeat right center;
+  background: url(https://i.gyazo.com/754bdef37d34b34f89ed698f890ad590.png) no-repeat left center;
 }
 .site-search-date::placeholder{
   font-weight:400;
