--- a/css/akadeemia.css
+++ b/css/akadeemia.css
@@ -635,14 +635,17 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
   border: solid 2px #ffffff;
   background-color: #fdfdfd;
   margin: 0px 10px 65px 0px;
-  padding-right:5px;
-  text-align:right;
+  padding-left:5px;
+  text-align: center;
   font-family: Roboto;
-  background: url(https://i.gyazo.com/754bdef37d34b34f89ed698f890ad590.png) no-repeat left center;
 }
-.site-search-date::placeholder{
+.site-search-date::placeholder{  
+  font-size:14px;
   font-weight:400;
   font-style: normal;
+  text-align:right;
+  padding-right:27px;
+  background: url(https://i.gyazo.com/754bdef37d34b34f89ed698f890ad590.png) no-repeat left center;
   /* text-align:center; */ /*.site-search-category is not alignec center so this shan't be either*/
 }
 
@@ -1091,14 +1094,6 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
 }
 .row-table .table-row{padding-top: 15px;}
 
-.site-search-category{
-  width: 156px;
-}
-
-.site-search-date {
-  width: 156px;
-}
-
 .row-text ul {
   padding-inline-start:10px;
 }
@@ -1302,6 +1297,18 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
 
 @media (max-width:767px){
   .row-internal-schooling .bg{height:270px;margin-top:130px}
+
+  .site-search-category{
+    width: 156px;
+  }
+  
+  .site-search-date {
+    width: 156px;
+    font-size: 13px;
+  }
+  .site-search-date::placeholder{
+    padding-right: 15px;
+  }
 }
 
 .row-internal-schooling{margin-top:33px;margin-bottom:0}.row-internal-schooling.row-about{margin-top:-62px}.row-internal-schooling.row-about h2{margin-bottom:0;margin-left:0}.row-internal-schooling.row-about h3{margin-left:0}.row-internal-schooling h2,.row-internal-schooling h3,.row-internal-schooling img,.row-internal-schooling ul{margin-left:-15px}.row-internal-schooling h2{margin-bottom:20px}.row-internal-schooling .schooling-intro img{height:250px;width:250px;float:left;margin:0 20px 0 -15px}.row-internal-schooling .schooling-intro p{text-align:justify}.row-internal-schooling .schooling-intro em{color:#b2b2b2;font-style:normal;padding:0 10px}.row-internal-schooling ul{list-style:none;padding:0}.row-internal-schooling ul li{list-style:none}.row-internal-schooling ul li:before{content:"\2022";color:#666;font-size:15px;padding-left:3px;padding-right:5px}.container-trainers{background-color:#f5f5f5;padding-bottom:50px}.container-trainers:not(.first) .row-internal-schooling{margin-top:0}.container-trainers:not(.first) .row-internal-schooling .col-sm-10{border-top:1px solid #dbdcd5;padding-top:50px}.container-trainers h3{margin:0 0 0 -15px}.container-trainers .title{margin-left:-15px;font-size:18px;line-height:30px;margin-bottom:30px}.container-trainers p:last-of-type{margin-bottom:0}.schooling-additional{margin-bottom:90px}.square-wrap{position:relative;height:320px;width:100%;max-width:320px;margin:0 auto 20px;overflow:hidden}.square-wrap img{position:absolute;left:-100%;right:-100%;top:-100%;bottom:-100%;margin:auto;min-height:100%;min-width:100%;max-height:320px;width:auto}.sample-program{margin-top:80px;margin-bottom:80px}.sample-program h2{margin-bottom:15px}.sample-program p{margin-bottom:0}.sample-program a{color:#424242}.sample-program a:hover{color:#d92027}.sample-program a span{top:-1px;left:6px;position:relative;font-size:12px}.row-trainers-page{margin-bottom:140px}.row-trainers-page .trainer{display:inline-block;width:47%;margin:0 0 15px;float:left;color:#424242}
