--- a/css/akadeemia.css
+++ b/css/akadeemia.css
@@ -702,6 +702,12 @@ caption{padding-top:8px;padding-bottom:8px;color:#777}.table{width:100%;max-widt
   padding-left:5px;
 }
 
+.sample-program a{
+  font-size:18px;
+  line-height:24px;
+  font-weight: 500;
+}
+
 @media (max-width:425px){
   .site-search-date_holder {
     width:100%;
